# futures_cpp

./: .travis-ci.yml  .travis.yml  CMakeLists.txt  CppBuild.toml  README.md
examples/: client_test.cpp  connect_proxy.cpp  console.cpp  echo.cpp  fake_http.cpp  socket.cpp  ws_server.cpp
include/: futures_cpp.h
include/futures/: Async.h  AsyncSink.h  Channel.h  Core.h  CpuPoolExecutor.h  EventExecutor.h  EventLoop.h  EventThreadPool.h  Exception.h  Executor.h  Future-inl.h  Future-pre.h  Future.h  Promise.h  Service.h  Signal.h  Stream-inl.h  Stream.h  Task.h  TcpStream.h  TimeKeeper.h  Timeout.h  Timer.h  TimerKeeper.h  UnparkMutex.h
include/futures/channel/: BufferedChannel.h  ChannelBase.h  ChannelStream.h  OneShotChannel.h  UnboundedMPSCChannel.h
include/futures/channel/detail/: mpsc-queue.hpp
include/futures/codec/: Codec.h  LengthFieldBasedFrameDecoder.h  LineBasedDecoder.h  StringEncoder.h
include/futures/core/: ApplyTuple.h  Bits.h  Compression.h  Cursor.h  Demangle.h  Either.h  ExceptionWrapper.h  FBString.h  File.h  FileUtil.h  Hash.h  IOBuf.h  IOBufQueue.h  IPAddress.h  IPAddressException.h  IPAddressV4.h  IPAddressV6.h  Memory.h  MoveWrapper.h  Portability.h  Range.h  ScopeGuard.h  SocketAddress.h  SparseByteSet.h  Subprocess.h  Try.h  Varint.h
include/futures/core/detail/: FileUtilDetail.h  IPAddress.h  RangeCommon.h
include/futures/core/portability/: Config.h
include/futures/core/variant/: variant.hpp
include/futures/detail/: BloomFilter.h  LoopFn.h  SelectFuture.h  StaticMultiFuture.h  StreamIterator.h  SyntaxSugar.h  ThreadLocalData.h  WhenAllFuture.h
include/futures/dns/: Resolver.h  ResolverFuture.h
include/futures/http/: HttpClient.h  HttpCodec.h  HttpController.h  HttpParser.h  WsCodec.h  WsController.h
include/futures/io/: AsyncFile.h  AsyncSSLSocket.h  AsyncServerSocket.h  AsyncSocket.h  Channel.h  ChannelFutures.h  Io.h  IoFuture.h  IoStream.h  PipeChannel.h  PipelinedRpcFuture.h  SSLContext.h  Signal.h  SocketFutures.h  StreamAdapter.h  WaitHandleBase.h  WorkIOObject.h
include/futures/service/: ClientDispatcher.h  Dispatch.h  RpcFuture.h  ServerDispatcher.h  Service.h
modules/: modules.cmake
modules/futures_mysql/: CMakeLists.txt
modules/futures_mysql/include/: futures_mysql.h
modules/futures_mysql/include/futures_mysql/: Command.h  Connection.h  Exception.h  MySql.h  Pool.h  PreparedStatement.h  ResultSet.h  SqlTypes.h  Transaction.h
modules/futures_mysql/src/: Connection.cpp  PrepareStatement.cpp  Transaction.cpp  futures_mysql.cpp
modules/futures_mysql/test/: test_all.cpp
modules/futures_readline/: CMakeLists.txt  README.md
modules/futures_readline/examples/: console.cpp
modules/futures_readline/include/futures_readline/: Console.h  Readline.h
modules/futures_readline/src/: Console.cpp  Readline.cpp
modules/futures_readline/test/: test_all.cpp
modules/futures_redis/: CMakeLists.txt
modules/futures_redis/examples/: subscriber.cpp
modules/futures_redis/include/futures_redis/: RedisFuture.h  RedisReply.h
modules/futures_redis/src/: RedisFuture.cpp  RedisReply.cpp
modules/futures_redis/test/: test_all.cpp
modules/futures_zookeeper/: CMakeLists.txt  README.md
modules/futures_zookeeper/examples/: cli.cpp  dlock.cpp
modules/futures_zookeeper/include/futures_zookeeper/: Exception.h  Request.h  ZkClient.h  ZkFuture-inl.h
modules/futures_zookeeper/src/: Exception.cpp  ZkClient.cpp
modules/futures_zookeeper/test/: test_all.cpp
modules/futures_zookeeper/zkclient/: CMakeLists.txt  CppBuild.toml
modules/futures_zookeeper/zkclient/cmake/: config.h.cmakein
src/: AsyncFile.cpp  AsyncSSLSocket.cpp  AyncSocket.cpp  EventExecutor.cpp  File.cpp  FileUtil.cpp  GlogDummy.h  IOBuf.cpp  IPAddress.cpp  Io.cpp  LengthFieldBasedFrameDecoder.cpp  LineBasedDecoder.cpp  PipeChannel.cpp  Resolver.cpp  ResolverFuture.cpp  SSLContext.cpp  SocketAddress.cpp  TcpStream.cpp  Timer.cpp  futures_cpp.cpp  libaepp.h
src/folly/: Compression.cpp  FileUtil.cpp  GlogDummy.h  IOBuf.cpp  IOBufQueue.cpp  IPAddressV4.cpp  IPAddressV6.cpp  RangeCommon.cpp  Subprocess.cpp
src/http/: HttpClient.cpp  HttpCodec.cpp  HttpParser.cpp  WsCodec.cpp  http_parser.c  ws_parser.c
src/http/cryptlite/: base64.h  sha1.h
src/libae/: anet.c  anet.h
src/udns/: CMakeLists.txt
test/: HelperTypes.h  test_all.cpp  test_channel.cpp  test_dns.cpp  test_file.cpp  test_futures.cpp  test_ssl.cpp  test_stream.cpp  test_streambuf_adapter.cpp  test_timer.cpp
